<resources>
    <string name="app_name">MAD Project</string>

    <string name="your_order">Your Order</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="your_order_default_items">Your Order (0 items)</string>
    <string name="place_order">Place Order</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="save">Save</string>
    <string name="settings">Settings</string>
    <string name="select_your_gender">Select Your Gender</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="data_saving">Data Saving</string>
    <string name="field_empty">Field cannot be empty</string>
    <string name="invalid_mobile_no">Invalid Mobile Number</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="load_item_images">Load Item Images</string>
    <string name="on">On</string>
    <string name="offline">Offline</string>
    <string name="food_menu">Food Menu</string>
    <string name="menu_mode">Menu Mode</string>
    <string name="update_menu">Update Menu</string>
    <string name="update_the_latest_food_menu_for_offline">Update the latest food menu for offline</string>
    <string name="delete_all_the_menu_items_from_offline_data">Delete all the menu items from offline data</string>
    <string name="delete_menu">Delete Menu</string>
    <string name="saved_details">Saved Details</string>
    <string name="delete_saved_cards">Delete Saved Cards</string>
    <string name="remove_all_the_saved_cards">Remove all the saved cards</string>
    <string name="delete_orders_history">Delete Orders History</string>
    <string name="remove_all_the_previous_orders_details">Remove all the previous orders details</string>
    <string name="about">About</string>
    <string name="app_version">App Version</string>
    <string name="app_version_number">1.0.0</string>
    <string name="developer">Developer</string>
    <string name="developer_name">Urban Bites</string>
    <string name="title_activity_navigation_drawer">Navigation_Drawer</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_nav">NavActivity</string>


    <string name="contact_us">Contact Us</string>
    <string name="call">Call</string>
    <string name="message">Message</string>

    <string name="email">Email</string>
    <string name="mail">Mail</string>
    <string name="have_a_problem">Have A Problem</string>
    <string name="name">Name</string>
    <string name="_14_4">$14.4</string>
    <string name="payment_method">Payment Method</string>
    <string name="cash_payment">Cash Payment</string>
    <string name="goback">goback</string>
    <string name="wallets">Wallets</string>
    <string name="pay_securely">PAY SECURELY</string>
    <string name="saved_cards">Saved Cards</string>
    <string name="credit_or_debit_card">Credit or Debit Card</string>

    <string name="full_name">Full Name</string>
    <string name="create_account">Create Account</string>
    <string name="enjoy_your_meal">Enjoy Your Meal</string>
    <string name="e_mail">E-Mail</string>
    <string name="company_organization">Company_Organization</string>
    <string name="employee_id">Employee ID</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="create_password">Create Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="employee_id_card">Employee ID Card</string>
    <string name="choose_image">Choose Image</string>
    <string name="i_agree_to_the_terms_conditions"><![CDATA[I agree to the terms & conditions]]></string>
    <string name="login">Login</string>
    <string name="already_have_a_account">Already Have A Account?</string>
    <string name="preview">Preview</string>
    <string name="register">Register</string>
    <string name="full_details">Full Details</string>
    <string name="hi">Hi</string>
    <string name="menu_icon">Menu Icon</string>
    <string name="food_categories">Food Categories</string>
    <string name="cold_drink">Beverages</string>
    <string name="salad">Salad</string>
    <string name="dessert">Dessert</string>
    <string name="noodles">Pasta</string>
    <string name="here_s_what_i_found_for_you">Here\'s what I found for you</string>
    <string name="show_all">Show all</string>
    <string name="item_name">Item Name</string>
    <string name="short_item_description">Short Item Description</string>
    <string name="default_price">LKR0.00</string>
    <string name="default_quantity">0</string>
    <string name="hello">Hello</string>
    <string name="password">Password</string>
    <string name="don_t_have_a_account">Dont have an account</string>
    <string name="forgot_password">Forgot Password</string>

    <string name="order_details">Order details</string>
    <string name="total_price">Total Price</string>
    <string name="tax">Tax</string>
    <string name="sub_total">Sub-total</string>
    <string name="time_for_take_away_of_order">Time for take-away of order</string>
    <string name="change_time">Change Time</string>
    <string name="proceed_to_pay">Proceed to Pay</string>


    <!--order history -->
    <string name="orders_history">Order History</string>
    <string name="nothing_in_your_order_history">Nothing in your Order History</string>

    <string name="default_date_and_time">Jan 02, 2022 at 10:08 AM</string>
    <string name="confirm_payment">Confirm Payment</string>
    <string name="pay">Pay</string>
    <string name="save_this_card_for_future_payments">Save this card for future payments</string>
    <string name="xxx">XXX</string>
    <string name="default_card_number">2334 xxxx xxxx 6335</string>
    <string name="default_date">09/23</string>
    <string name="card_number">Card Number</string>
    <string name="card_holder_name">Card Holder Name</string>
    <string name="expiry_validity_date">Expiry / Validity Date</string>
    <string name="cvv">CVV</string>
    <string name="mm_yy">MM/YY</string>
    <string name="processing">Processing</string>
    <string name="payment">Payment</string>
    <string name="default_order_id">Order ID: UB12345</string>
    <string name="order_successful">Order Successful</string>
    <string name="date">DATE</string>
    <string name="order_take_away_time">Order Take-away Time</string>
    <string name="total_amount">Total Amount</string>
    <string name="Rupees">Rs</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="need_help_contact_us">Need Help? Contact Us</string>

    <string name="my_orders">My Orders</string>
    <string name="seems_like_you_have_not_ordered_anything">Seems like you have not ordered anything !</string>
    <string name="show_this_qr_code_to_your_office_canteen">Show this QR Code to your Office Canteen</string>

</resources>